# prototui

./: .gitignore  AGENTS.md  LICENSE  MORE.md  README.md  install.sh  pyproject.toml
.claude/skills/prototui-builder/: SKILL.md
.claude/skills/prototui-builder/examples/: __init__.py  async_example.py  state_example.py  table_multiselect_example.py
examples/: form_example.py  layered_workflow_example.py  table_example.py  workflow_example.py
patterns/: async_state_dashboard.py  form_with_table_selection.py  layered_list_selection.py  layered_multi_select.py  persistent_storage.json  persistent_storage.py  progress_bar_table.py
prototui/: __init__.py
prototui/components/: __init__.py  explanation_panel.py  layered_data_table.py
prototui/screens/: __init__.py  universal_screen.py
prototui/themes/: __init__.py  default.tcss
prototui/utils/: __init__.py  state_manager.py
tui/: __init__.py
tui/prototui/: __init__.py  apps.yaml.example  installer_gen.py  main.py  sync_skill.py
utilities/: __init__.py  async_helpers.py  explanation_panel.py  form_screen.py  layered_data_table.py  terminal_compat.py  terminal_setup.py
