[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prototui"
version = "0.1.0"
description = "ProtoTUI - One pattern for all terminal UI types - Textual-based library for building consistent TUIs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Gorm Rødder", email = "gormroedder@gmail.com"}
]
keywords = ["tui", "terminal", "textual", "ui", "cli", "forms", "tables", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.50.0",
]

[project.urls]
Homepage = "https://github.com/octagorm/prototui"
Documentation = "https://github.com/octagorm/prototui#readme"
Repository = "https://github.com/octagorm/prototui"
Issues = "https://github.com/octagorm/prototui/issues"

[project.scripts]
prototui = "tui.prototui.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
    "textual-dev>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["prototui*", "tui*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
